--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -5,10 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <title>Personal Blog Website</title>
 </head>
 
 <body>
+    <div class='main-container'>
+        <div class='navbar-container'>
+            <div class='logo-container'>
+                <img src="" alt="">
+            </div>
+            <div class='navbar-menu'>
+                <li>Home</li>
+                <li>About</li>
+            </div>
+
+        </div>
+        <div class='cards-container'>
+            <div class='blog-card'>
+
+            </div>
+        </div>
+        <footer>
+
+        </footer>
+
+    </div>
 
 </body>
 
