--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -6,32 +6,132 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/navbar.css">
+
     <title>Personal Blog Website</title>
 </head>
 
 <body>
-    <div class='main-container'>
-        <div class='navbar-container'>
-            <div class='logo-container'>
-                <img src="" alt="">
+    <div class="main-container">
+        <header class="navbar-container">
+            <div class="container">
+                <div class="navbar-logo">RR.</div>
+                <ul class="navbar-menu">
+                    <li class="navbar-link"><a href="#">Home</a></li>
+                    <li class="navbar-link"><a href="#">About</a></li>
+                    <li class="navbar-link"><a href="#">Contact</a></li>
+                </ul>
             </div>
-            <div class='navbar-menu'>
-                <li>Home</li>
-                <li>About</li>
-            </div>
-
+        </header>
+        <div class="container intro-container">
+            <h1>Welcome!</h1>
+            <p>Have fun reading about the things <br>
+                that I like the most</p>
         </div>
-        <div class='cards-container'>
-            <div class='blog-card'>
-
+        <div class="container cards-container">
+            <div id="post-one" class="post-card">
+                <div class="post-topic">
+                    Vegan
+                </div>
+                <div class="post-title">
+                    <h2>Why I am vegan <br>
+                        (and you should be vegan too)
+                    </h2>
+                </div>
+                <div class="post-image">
+                    <img src="" alt="">
+                </div>
+                <button class="post-read-button">
+                    Read
+                </button>
+            </div>
+            <div id="post-two" class="post-card">
+                <div class="post-topic">
+                    Zero waste
+                </div>
+                <div class="post-title">
+                    <h2>10 tips <br>
+                        to go zero waste
+                    </h2>
+                </div>
+                <div class="post-image">
+                    <img src="" alt="">
+                </div>
+                <button class="post-read-button">
+                    Read
+                </button>
+            </div>
+            <div id="post-three" class="post-card">
+                <div class="post-topic">
+                    Minimalism
+                </div>
+                <div class="post-title">
+                    <h2>The benefits <br>
+                        of downsizing
+                    </h2>
+                </div>
+                <div class="post-image">
+                    <img src="" alt="">
+                </div>
+                <button class="post-read-button">
+                    Read
+                </button>
+            </div>
+            <div id="post-four" class="post-card">
+                <div class="post-topic">
+                    Forest bath
+                </div>
+                <div class="post-title">
+                    <h2>Give yourself <br>
+                        a bath of trees in a forest
+                    </h2>
+                </div>
+                <div class="post-image">
+                    <img src="" alt="">
+                </div>
+                <button class="post-read-button">
+                    Read
+                </button>
+            </div>
+            <div id="post-five" class="post-card">
+                <div class="post-topic">
+                    Specialty Coffee
+                </div>
+                <div class="post-title">
+                    <h2>Why coffee <br>
+                        makes me so happy?
+                    </h2>
+                </div>
+                <div class="post-image">
+                    <img src="" alt="">
+                </div>
+                <button class="post-read-button">
+                    Read
+                </button>
+            </div>
+            <div id="post-six" class="post-card">
+                <div class="post-topic">
+                    Climate change
+                </div>
+                <div class="post-title">
+                    <h2>Some amazing facts<br>
+                        about the climate crisis
+                    </h2>
+                </div>
+                <div class="post-image">
+                    <img src="" alt="">
+                </div>
+                <button class="post-read-button">
+                    Read
+                </button>
             </div>
         </div>
+
         <footer>
-
+            <h6>Roser Reverte 2020</h6>
         </footer>
-
     </div>
-
 </body>
 
 </html>
