--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -19,3 +19,62 @@
 .navbar-container ul li {
     margin-left: 16px;
 }
+
+.navbar-logo {
+    color: #222326;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+    font-size: 24px;
+}
+
+div ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #aaa;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0 10px;
+    color: #222326;
+    font-family: 'Montserrat', sans-serif;
+    z-index: 1;
+    position:relative;
+}
+
+div ul li a,
+div ul li a:after,
+div ul li a:before {
+    transition: all .5s;
+}
+
+div ul li a:hover {
+    color: #555;
+}
+
+div.shift ul li a:hover {
+    color: #222326;
+}
+
+div.shift ul li a:after {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    width: 100%;
+    height: 1px;
+    content: '.';
+    color: transparent;
+    background: #d7e0d8;
+    visibility: none;
+    opacity: 0;
+    z-index: -1;
+}
+  
+div.shift ul li a:hover:after {
+    opacity: 1;
+    visibility: visible;
+    height: 100%;
+}
