--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,800i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/navbar.css">
 
@@ -15,7 +16,7 @@
 <body>
     <div class="main-container">
         <header class="navbar-container">
-            <div class="container">
+            <div class="container shift">
                 <div class="navbar-logo">RR.</div>
                 <ul class="navbar-menu">
                     <li class="navbar-link"><a href="#">Home</a></li>
