--- a/styles/index.css
+++ b/styles/index.css
@@ -16,3 +16,10 @@ body {
     flex-direction: column;
     width: 100%;
 }
+
+.intro-container {
+    color: #222326;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+    font-size: 24px;
+}
