--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,12 +1,18 @@
 .navbar-container {
     display: flex;
-    border-bottom: thin solid #ccc;
+    color: #222326;
 }
 
 .navbar-container .container {
     display: flex;
     align-items: center;
     flex-direction: row;
+}
+
+.navbar-logo {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
 }
 
 .navbar-container ul {
@@ -20,43 +26,20 @@
     margin-left: 16px;
 }
 
-.navbar-logo {
-    color: #222326;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 800;
-    font-size: 24px;
-}
-
-div ul li a {
+.navbar-container ul li a {
     display: block;
-    padding: 15px;
+    position: relative;
+    font-weight: 700;
+    padding: 8px;
     text-decoration: none;
-    color: #aaa;
-    font-weight: 800;
     text-transform: uppercase;
-    margin: 0 10px;
+    margin: 8px;
     color: #222326;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     z-index: 1;
-    position:relative;
 }
 
-div ul li a,
-div ul li a:after,
-div ul li a:before {
-    transition: all .5s;
-}
-
-div ul li a:hover {
-    color: #555;
-}
-
-div.shift ul li a:hover {
-    color: #222326;
-}
-
-div.shift ul li a:after {
-    display: block;
+.navbar-container ul li a:after {
     position: absolute;
     top: 0;
     left: 0;
@@ -64,16 +47,17 @@ div.shift ul li a:after {
     right: 0;
     margin: auto;
     width: 100%;
-    height: 1px;
+    height: 0;
     content: '.';
     color: transparent;
-    background: #d7e0d8;
-    visibility: none;
+    background: #ffd600;
+    visibility: hidden;
     opacity: 0;
     z-index: -1;
+    transition: all .3s;
 }
-  
-div.shift ul li a:hover:after {
+
+.navbar-container ul li a:hover:after {
     opacity: 1;
     visibility: visible;
     height: 100%;
