--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,800i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600|Roboto:400,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="stylesheet" href="../styles/card.css">
+
 
     <title>Personal Blog Website</title>
 </head>
@@ -16,7 +18,7 @@
 <body>
     <div class="main-container">
         <header class="navbar-container">
-            <div class="container shift">
+            <div class="container">
                 <div class="navbar-logo">RR.</div>
                 <ul class="navbar-menu">
                     <li class="navbar-link"><a href="#">Home</a></li>
