--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -9,9 +9,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="stylesheet" href="../styles/grid.css">
     <link rel="stylesheet" href="../styles/card.css">
-
-
     <title>Personal Blog Website</title>
 </head>
 
@@ -32,8 +31,8 @@
             <p>Have fun reading about the things <br>
                 that I like the most</p>
         </div>
-        <div class="container cards-container">
-            <div id="post-one" class="post-card">
+        <div class="container grid-container">
+            <div class="card grid-element-expanded">
                 <div class="post-topic">
                     Vegan
                 </div>
@@ -49,7 +48,7 @@
                     Read
                 </button>
             </div>
-            <div id="post-two" class="post-card">
+            <div class="card">
                 <div class="post-topic">
                     Zero waste
                 </div>
@@ -65,7 +64,7 @@
                     Read
                 </button>
             </div>
-            <div id="post-three" class="post-card">
+            <div class="card">
                 <div class="post-topic">
                     Minimalism
                 </div>
@@ -81,7 +80,7 @@
                     Read
                 </button>
             </div>
-            <div id="post-four" class="post-card">
+            <div class="card">
                 <div class="post-topic">
                     Forest bath
                 </div>
@@ -97,7 +96,7 @@
                     Read
                 </button>
             </div>
-            <div id="post-five" class="post-card">
+            <div class="card">
                 <div class="post-topic">
                     Specialty Coffee
                 </div>
@@ -113,7 +112,7 @@
                     Read
                 </button>
             </div>
-            <div id="post-six" class="post-card">
+            <div class="card grid-element-expanded">
                 <div class="post-topic">
                     Climate change
                 </div>
@@ -130,10 +129,6 @@
                 </button>
             </div>
         </div>
-
-        <footer>
-            <h6>Roser Reverte 2020</h6>
-        </footer>
     </div>
 </body>
 
