--- a/styles/card.css
+++ b/styles/card.css
@@ -1,8 +1,3 @@
-.cards-container {
-border: thin solid #ccc;
-}
-
-.post-card {
-    border: thin solid blue;
-
+.card {
+    border: thin solid;
 }
