--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-    min-width: 1140px;
+    min-width: 1260px;
     margin: 0 auto;
 }
 
@@ -22,4 +22,5 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
     font-size: 24px;
+    margin-bottom: 32px;
 }
