--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -26,9 +26,9 @@
                 </ul>
             </div>
         </header>
-        <div class="container intro-container">
-            <h1>Welcome!</h1>
-            <p>Have fun reading about the things <br>
+        <div class="container">
+            <h1 class="title">Welcome!</h1>
+            <p class="subtitle">Have fun reading about the things <br>
                 that I like the most</p>
         </div>
         <div class="container grid-container">
@@ -129,6 +129,9 @@
                 </button>
             </div>
         </div>
+        <footer>
+            © 2020 - Roser Reverte
+        </footer>
     </div>
 </body>
 
