--- a/styles/grid.css
+++ b/styles/grid.css
@@ -3,6 +3,7 @@
     grid-gap: 24px;
     grid-template-columns: repeat(4, minmax(250px, 1fr));
     grid-auto-rows: 50px;
+    flex: 1;
 }
 
 .grid-container > div {
