--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -33,16 +33,15 @@
         </div>
         <div class="container grid-container">
             <div class="card grid-element-expanded">
-                <div class="post-topic">
+                <div class="post-topic-vegan">
                     Vegan
                 </div>
-                <div class="post-title">
+                <div class="post-title-vegan">
                     <h2>Why I am vegan <br>
                         (and you should be vegan too)
                     </h2>
                 </div>
-                <div class="post-image">
-                    <img src="" alt="">
+                <div class="post-image-vegan">
                 </div>
                 <button class="post-read-button">
                     Read
