--- a/styles/index.css
+++ b/styles/index.css
@@ -28,6 +28,10 @@ footer {
     min-height: 100vh;
 }
 
+.header-container {
+    margin-bottom: 48px;
+}
+
 .title {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
