--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -26,111 +26,65 @@
                 </ul>
             </div>
         </header>
-        <div class="container">
+        <div class="container header-container">
             <h1 class="title">Welcome!</h1>
             <p class="subtitle">Have fun reading about the things <br>
                 that I like the most</p>
         </div>
         <div class="container grid-container">
-            <div class="card grid-element-expanded">
-                <div class="post-topic-vegan">
-                    Vegan
+            <div class="card grid-element-expanded" style="background-image: url('../assets/vegan-post.jpeg')">
+                <div class="card-title">
+                    Why I am vegan <br> (and you should be vegan too)
                 </div>
-                <div class="post-title-vegan">
-                    <h2>Why I am vegan <br>
-                        (and you should be vegan too)
-                    </h2>
-                </div>
-                <div class="post-image-vegan">
-                </div>
-                <button class="post-read-button">
-                    Read
+                <button class="card-button">
+                    Read post
                 </button>
             </div>
-            <div class="card">
-                <div class="post-topic">
-                    Zero waste
+            <div class="card" style="background-image: url('../assets/zwaste-post.jpeg')">
+                <div class="card-title">
+                    10 tips <br>to go zero waste
                 </div>
-                <div class="post-title">
-                    <h2>10 tips <br>
-                        to go zero waste
-                    </h2>
-                </div>
-                <div class="post-image">
-                    <img src="" alt="">
-                </div>
-                <button class="post-read-button">
-                    Read
+                <button class="card-button">
+                    Read post
                 </button>
             </div>
-            <div class="card">
-                <div class="post-topic">
-                    Minimalism
+            <div class="card" style="background-image: url('../assets/minimalism-post.jpeg')">
+                <div class="card-title">
+                    Huge benefits <br> of minimalism
                 </div>
-                <div class="post-title">
-                    <h2>The benefits <br>
-                        of downsizing
-                    </h2>
-                </div>
-                <div class="post-image">
-                    <img src="" alt="">
-                </div>
-                <button class="post-read-button">
-                    Read
+                <button class="card-button">
+                    Read post
                 </button>
             </div>
-            <div class="card">
-                <div class="post-topic">
-                    Forest bath
+            <div class="card" style="background-image: url('../assets/forest-post.jpeg')">
+                <div class="card-title">
+                    Tree hugs <br> are magical
                 </div>
-                <div class="post-title">
-                    <h2>Give yourself <br>
-                        a bath of trees in a forest
-                    </h2>
-                </div>
-                <div class="post-image">
-                    <img src="" alt="">
-                </div>
-                <button class="post-read-button">
-                    Read
+                <button class="card-button">
+                    Read post
                 </button>
             </div>
-            <div class="card">
-                <div class="post-topic">
-                    Specialty Coffee
+            <div class="card" style="background-image: url('../assets/coffee-post.jpeg')">
+                <div class="card-title">
+                    Specialty coffe <br> favourites
                 </div>
-                <div class="post-title">
-                    <h2>Why coffee <br>
-                        makes me so happy?
-                    </h2>
-                </div>
-                <div class="post-image">
-                    <img src="" alt="">
-                </div>
-                <button class="post-read-button">
-                    Read
+                <button class="card-button">
+                    Read post
                 </button>
             </div>
-            <div class="card grid-element-expanded">
-                <div class="post-topic">
-                    Climate change
+            <div class="card grid-element-expanded" style="background-image: url('../assets/climate-post.jpeg')">
+                <div class="card-title">
+                    Urgent climate emergency changes <br> you should make
                 </div>
-                <div class="post-title">
-                    <h2>Some amazing facts<br>
-                        about the climate crisis
-                    </h2>
-                </div>
-                <div class="post-image">
-                    <img src="" alt="">
-                </div>
-                <button class="post-read-button">
-                    Read
+                <button class="card-button">
+                    Read post
                 </button>
             </div>
         </div>
-        <footer>
-            © 2020 - Roser Reverte
-        </footer>
+    </div>
+    <footer>
+        © 2020 - Roser Reverte
+    </footer>
     </div>
 </body>
 
