--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -24,6 +24,7 @@
                     <li class="navbar-link"><a href="#">About</a></li>
                     <li class="navbar-link"><a href="#">Contact</a></li>
                 </ul>
+                <img class="navbar-avatar" src="../assets/login-avatar.png" alt="">
             </div>
         </header>
         <div class="container header-container">
@@ -34,51 +35,51 @@
         <div class="container grid-container">
             <div class="card grid-element-expanded" style="background-image: url('../assets/vegan-post.jpeg')">
                 <div class="card-title">
-                    Why I am vegan <br> (and you should be vegan too)
+                    Why aren't you <br> vegan yet?
                 </div>
-                <button class="card-button">
+                <a class="card-button" href="./blog-post.html">
                     Read post
-                </button>
+                </a>
             </div>
             <div class="card" style="background-image: url('../assets/zwaste-post.jpeg')">
                 <div class="card-title">
                     10 tips <br>to go zero waste
                 </div>
-                <button class="card-button">
+                <a class="card-button" href="./blog-post.html">
                     Read post
-                </button>
+                </a>
             </div>
             <div class="card" style="background-image: url('../assets/minimalism-post.jpeg')">
                 <div class="card-title">
                     Huge benefits <br> of minimalism
                 </div>
-                <button class="card-button">
+                <a class="card-button" href="./blog-post.html">
                     Read post
-                </button>
+                </a>
             </div>
             <div class="card" style="background-image: url('../assets/forest-post.jpeg')">
                 <div class="card-title">
-                    Tree hugs <br> are magical
+                    The magic <br> of hugging trees
                 </div>
-                <button class="card-button">
+                <a class="card-button" href="./blog-post.html">
                     Read post
-                </button>
+                </a>
             </div>
             <div class="card" style="background-image: url('../assets/coffee-post.jpeg')">
                 <div class="card-title">
                     Specialty coffe <br> favourites
                 </div>
-                <button class="card-button">
+                <a class="card-button" href="./blog-post.html">
                     Read post
-                </button>
+                </a>
             </div>
             <div class="card grid-element-expanded" style="background-image: url('../assets/climate-post.jpeg')">
                 <div class="card-title">
                     Urgent climate emergency changes <br> you should make
                 </div>
-                <button class="card-button">
+                <a class="card-button" href="./blog-post.html">
                     Read post
-                </button>
+                </a>
             </div>
         </div>
     </div>
