--- a/styles/card.css
+++ b/styles/card.css
@@ -11,9 +11,9 @@
 .card-title {
     font-family: 'Montserrat', sans-serif;
     color: #fff;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 600;
-    text-shadow: 0px 1px 1px rgba(0, 0, 0, .2);
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, .4);
 }
 
 .card-button {
@@ -21,15 +21,20 @@
     align-items: center;
     justify-content: center;
     margin-top: auto;
+    text-decoration: none;
     color: #222326;
     font-family: 'Roboto', sans-serif;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-weight: 600;
     font-size: 16px;
-    width: 110px;
+    width: 116px;
     height: 36px;
     border: 0;
     border-radius: 8px;
-    background: #fff;
+    background: rgba(255, 255, 255, .8);
+    transition: background .2s ease-in-out;
+}
 
+.card-button:hover {
+    background: #fff;
 }
