--- a/styles/grid.css
+++ b/styles/grid.css
@@ -1,16 +1,30 @@
+/* Small screens */
 .grid-container {
     display: grid;
     grid-gap: 24px;
-    grid-template-columns: repeat(4, minmax(250px, 1fr));
+    grid-template-columns: repeat(1, minmax(250px, 1fr));
     grid-auto-rows: 50px;
-    flex: 1;
 }
 
 .grid-container > div {
     grid-row-end: span 5;
 }
 
-.grid-container > .grid-element-expanded {
-    grid-column-end: span 2;
-    grid-row-end: span 4;
+/* Medium screens */
+@media(min-width: 600px) {
+    .grid-container {
+        grid-template-columns: repeat(2, minmax(300px, 1fr));
+    }
+    
+    .grid-container > .grid-element-expanded {
+        grid-column-end: span 2;
+        grid-row-end: span 4;
+    }
+}
+
+/* Big screens */
+@media(min-width: 901px) {
+    .grid-container {
+        grid-template-columns: repeat(4, minmax(220px, 1fr));
+    }
 }
