--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html,
 body {
     width: 100%;
@@ -17,8 +21,10 @@ footer {
 }
 
 .container {
-    min-width: 1260px;
+    max-width: 1260px;
+    width: 100%;
     margin: 0 auto;
+    padding: 0 32px;
 }
 
 .main-container {
@@ -42,4 +48,5 @@ footer {
 .subtitle {
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
+    max-width: 280px;
 }
