--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,12 +1,14 @@
 .navbar-container {
     display: flex;
+    align-items: center;
+    flex-direction: row;
+    min-height: 84px;
     color: #222326;
 }
 
-.navbar-container .container {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
+.navbar-container.narrow {
+    max-height: 40px;
+    min-height: 40px;
 }
 
 .navbar-logo {
@@ -26,10 +28,14 @@
 }
 
 .navbar-container ul {
-    display: flex;
+    display: none;
     list-style: none;
     padding: 0;
     margin-left: auto;
+}
+
+.navbar-container.narrow ul {
+    display: flex;
 }
 
 .navbar-container ul li {
@@ -54,26 +60,14 @@
     opacity: 1;
 }
 
-/* .navbar-container ul li a:after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin: auto;
-    width: 100%;
-    height: 0;
-    content: '.';
-    color: transparent;
-    background: #ffd600;
-    visibility: hidden;
-    opacity: 0;
-    z-index: -1;
-    transition: all .3s;
-}
 
-.navbar-container ul li a:hover:after {
-    opacity: 1;
-    visibility: visible;
-    height: 100%;
-} */
+/* Medium screens */
+@media(min-width: 600px) {
+    .navbar-container ul {
+        display: flex;
+    }
+
+    .navbar-container.narrow ul {
+        display: none;
+    }
+}
