--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -16,21 +16,25 @@
 
 <body>
     <div class="main-container">
-        <header class="navbar-container">
-            <div class="container">
-                <div class="navbar-logo">RR.</div>
-                <ul class="navbar-menu">
-                    <li class="navbar-link"><a href="#">Home</a></li>
-                    <li class="navbar-link"><a href="#">About</a></li>
-                    <li class="navbar-link"><a href="#">Contact</a></li>
-                </ul>
-                <img class="navbar-avatar" src="../assets/login-avatar.png" alt="">
-            </div>
+        <header class="container navbar-container">
+            <div class="navbar-logo">RR.</div>
+            <ul class="navbar-menu">
+                <li class="navbar-link"><a href="#">Home</a></li>
+                <li class="navbar-link"><a href="#">About</a></li>
+                <li class="navbar-link"><a href="#">Contact</a></li>
+            </ul>
+            <img class="navbar-avatar" src="../assets/login-avatar.png" alt="">
+        </header>
+        <header class="container navbar-container narrow">
+            <ul class="navbar-menu">
+                <li class="navbar-link"><a href="#">Home</a></li>
+                <li class="navbar-link"><a href="#">About</a></li>
+                <li class="navbar-link"><a href="#">Contact</a></li>
+            </ul>
         </header>
         <div class="container header-container">
             <h1 class="title">Welcome!</h1>
-            <p class="subtitle">Have fun reading about the things <br>
-                that I like the most</p>
+            <p class="subtitle">Have fun reading about the things that I like the most</p>
         </div>
         <div class="container grid-container">
             <div class="card grid-element-expanded" style="background-image: url('../assets/vegan-post.jpeg')">
@@ -75,7 +79,7 @@
             </div>
             <div class="card grid-element-expanded" style="background-image: url('../assets/climate-post.jpeg')">
                 <div class="card-title">
-                    Urgent climate emergency changes <br> you should make
+                    Can we still save <br> the planet?
                 </div>
                 <a class="card-button" href="./blog-post.html">
                     Read post
