blog-post created, styles on header-section and new images

--- a/views/blog-homepage.html
+++ b/views/blog-homepage.html
@@ -34,7 +34,7 @@
         </header>
         <div class="container header-container">
             <h1 class="title">Welcome!</h1>
-            <p class="subtitle">Have fun reading about the things that I like the most</p>
+            <h2 class="subtitle">Have fun reading about the things that I like the most</h2>
         </div>
         <div class="container grid-container">
             <div class="card grid-element-expanded" style="background-image: url('../assets/vegan-post.jpeg')">
