--- a/views/blog-post.html
+++ b/views/blog-post.html
@@ -7,11 +7,55 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600|Roboto:400,700&display=swap"
         rel="stylesheet">
-    <title>Post page</title>
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="stylesheet" href="../styles/header-section-post.css">
+
+    <title>Blog post</title>
 </head>
 
 <body>
+    <div class="main-container">
+        <header class="container navbar-container">
+            <div class="navbar-logo">RR.</div>
+            <ul class="navbar-menu">
+                <li class="navbar-link"><a href="#">Home</a></li>
+                <li class="navbar-link"><a href="#">About</a></li>
+                <li class="navbar-link"><a href="#">Contact</a></li>
+            </ul>
+            <img class="navbar-avatar" src="../assets/login-avatar.png" alt="">
+        </header>
+        <header class="container navbar-container narrow">
+            <ul class="navbar-menu">
+                <li class="navbar-link"><a href="#">Home</a></li>
+                <li class="navbar-link"><a href="#">About</a></li>
+                <li class="navbar-link"><a href="#">Contact</a></li>
+            </ul>
+        </header>
+        <div class="container header-container">
 
+            <h1 class="post-title">Eat your veggies and save the planet</h1>
+            <h2 class="post-subtitle">Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion
+                daikon amaranth.
+            </h2>
+        </div>
+        <h2 class="post-subtitle">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear
+            garlic gram celery bitterleaf wattle seed collard greens nori.
+        </h2>
+        <p class="post-text">
+            Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean
+            collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.
+
+            Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach
+            avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin
+            horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean
+            swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd
+            swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean
+            chickweed potato bell pepper artichoke</p>
+        <div class="post-image" style="background-image: url('../assets/post-title-background.jpeg')">
+        </div>
+        <footer>
+            © 2020 - Roser Reverte
+        </footer>
+    </div>
 </body>
-
-</html>
