color styles, title

--- a/views/blog-post.html
+++ b/views/blog-post.html
@@ -9,13 +9,13 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/navbar.css">
-    <link rel="stylesheet" href="../styles/header-section-post.css">
+    <link rel="stylesheet" href="../styles/post.css">
 
     <title>Blog post</title>
 </head>
 
 <body>
-    <div class="main-container">
+    <div class="post-page-background-color main-container">
         <header class="container navbar-container">
             <div class="navbar-logo">RR.</div>
             <ul class="navbar-menu">
@@ -32,30 +32,40 @@
                 <li class="navbar-link"><a href="#">Contact</a></li>
             </ul>
         </header>
-        <div class="container header-container">
 
-            <h1 class="post-title">Eat your veggies and save the planet</h1>
-            <h2 class="post-subtitle">Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion
-                daikon amaranth.
-            </h2>
-        </div>
-        <h2 class="post-subtitle">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear
-            garlic gram celery bitterleaf wattle seed collard greens nori.
-        </h2>
-        <p class="post-text">
-            Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean
-            collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.
-
-            Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach
-            avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin
-            horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean
-            swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd
-            swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean
-            chickweed potato bell pepper artichoke</p>
-        <div class="post-image" style="background-image: url('../assets/post-title-background.jpeg')">
+        <div class="post-background-color">
+            <div class="post-title-container">
+                <h1>Eat your veggies and save the planet</h1>
+            </div>
+            <div class="container post-container">
+                <img src="../assets/post-image-alvocados.jpeg" alt="">
+                <h2 class="post-subtitle">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro
+                    catsear
+                    garlic gram celery bitterleaf wattle seed collard greens nori.
+                </h2>
+                <p class="post-text">
+                    Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts
+                    fava
+                    bean
+                    collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko
+                    zucchini.
+                    swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water
+                    chestnut
+                    gourd
+                    swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts
+                    nori
+                    azuki
+                    bean
+                    chickweed potato bell pepper artichoke</p>
+                <figure class="picture-post-fig">
+                    <img src="../assets/post-image-one.jpeg" alt="broccoli" style="width:50%">
+                    <figcaption>Photo by FOODISM360 on Unsplash</figcaption>
+                </figure>
+            </div>
         </div>
         <footer>
             © 2020 - Roser Reverte
         </footer>
+    </div>
     </div>
 </body>
