final images, background image

--- a/views/blog-post.html
+++ b/views/blog-post.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <div class="post-page-background-color main-container">
-        <header class="container navbar-container">
+    <div class="main-container" style="background-image: url('../assets/post-image-one.jpeg')">
+        <header class=" container navbar-container">
             <div class="navbar-logo">RR.</div>
             <ul class="navbar-menu">
                 <li class="navbar-link"><a href="#">Home</a></li>
@@ -38,7 +38,11 @@
                 <h1>Eat your veggies and save the planet</h1>
             </div>
             <div class="container post-container">
-                <img src="../assets/post-image-alvocados.jpeg" alt="">
+                <figure class="picture-post-fig">
+                    <img src="../assets/post-image-avocado.jpeg" alt="">
+                    <figcaption>Photo by Katarina Šikuljak on Unsplash</figcaption>
+                </figure>
+
                 <h2 class="post-subtitle">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro
                     catsear
                     garlic gram celery bitterleaf wattle seed collard greens nori.
@@ -57,10 +61,7 @@
                     azuki
                     bean
                     chickweed potato bell pepper artichoke</p>
-                <figure class="picture-post-fig">
-                    <img src="../assets/post-image-one.jpeg" alt="broccoli" style="width:50%">
-                    <figcaption>Photo by FOODISM360 on Unsplash</figcaption>
-                </figure>
+
             </div>
         </div>
         <footer>
