--- a/styles/post.css
+++ b/styles/post.css
@@ -1,8 +1,6 @@
-.post-page-background-color {
-    background-color: #C9DEB2;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
+.main-container {
+    background-size: cover;
+    background-position: center;
 }
 
 .post-background-color {
@@ -17,6 +15,7 @@
     color: #222326;
     font-weight: 600;
     font-size: 22px;
+    text-align: center;
 }
 
 .post-container img{
