--- a/views/blog-post.html
+++ b/views/blog-post.html
@@ -9,7 +9,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/navbar.css">
-    <link rel="stylesheet" href="../styles/post.css">
+    <link rel="stylesheet" href="../styles/main-post.css">
+    <link rel="stylesheet" href="../styles/grid-post.css">
 
     <title>Blog post</title>
 </head>
@@ -34,33 +35,39 @@
         </header>
 
         <div class="post-background-color">
-            <div class="post-title-container">
+            <header class="post-title-container">
                 <h1>Eat your veggies and save the planet</h1>
-            </div>
+            </header>
             <div class="container post-container">
                 <figure class="picture-post-fig">
                     <img src="../assets/post-image-avocado.jpeg" alt="">
                     <figcaption>Photo by Katarina Šikuljak on Unsplash</figcaption>
                 </figure>
-
-                <h2 class="post-subtitle">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro
-                    catsear
-                    garlic gram celery bitterleaf wattle seed collard greens nori.
-                </h2>
-                <p class="post-text">
-                    Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts
-                    fava
-                    bean
-                    collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko
-                    zucchini.
-                    swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water
-                    chestnut
-                    gourd
-                    swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts
-                    nori
-                    azuki
-                    bean
-                    chickweed potato bell pepper artichoke</p>
+                <div class="post-grid-container">
+                    <section class="post-article">
+                        <h2 class="post-subtitle">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro
+                            catsear
+                            garlic gram celery bitterleaf wattle seed collard greens nori.
+                        </h2>
+                        <p class="post-text">
+                            Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts
+                            fava
+                            bean
+                            collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko
+                            zucchini.
+                            swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water
+                            chestnut
+                            gourd
+                            swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts
+                            nori
+                            azuki
+                            bean
+                            chickweed potato bell pepper artichoke</p>
+                    </section>
+                    <section class="post-author">
+                        author info goes here
+                    </section>
+                </div>
 
             </div>
         </div>
