--- a/styles/main-post.css
+++ b/styles/main-post.css
@@ -18,22 +18,15 @@
     text-align: center;
 }
 
-.post-container img{
-    width: 100%;
-    height: 700px;
-}
-
 .post-text {
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     text-align: center;
 }
 
-.post-image {
+.post-container img{
+    display: flex;
     width: 100%;
-    height: 400px;
-    background-size: cover;
-    background-position: center;
 }
 
 .picture-post-fig {
@@ -42,5 +35,5 @@
     color: #222326;
     font-size: 10px;
     text-align: center;
-
 }
+
