--- a/views/blog-post.html
+++ b/views/blog-post.html
@@ -43,26 +43,36 @@
                     <img src="../assets/post-image-avocado.jpeg" alt="">
                     <figcaption>Photo by Katarina Šikuljak on Unsplash</figcaption>
                 </figure>
-                <div class="post-grid-container">
+                <div class="post-grid-container post-text">
                     <section class="post-article">
-                        <h2 class="post-subtitle">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro
-                            catsear
-                            garlic gram celery bitterleaf wattle seed collard greens nori.
+                        <h2>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro
+                            catsear?
                         </h2>
-                        <p class="post-text">
+                        <h3>Corn amaranth salsify bunya nuts
+                            nori</h3>
+                        <p>
                             Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts
                             fava
                             bean
-                            collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko
+                            collard greens dandelion okra wakame tomato. Dandelion <span
+                                style="color:green">cucumber</span> earthnut pea peanut soko
                             zucchini.
-                            swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water
+                            swiss chard seakale pumpkin onion chickpea gram corn pea.
+                        </p>
+                        <h4>Celery quandong <span style="text-decoration:underline"> carrot
+                                watercress</span> chicory earthnut:</h4>
+                        <p>
+                            Brussels sprout coriander water
                             chestnut
                             gourd
-                            swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts
+                            swiss chard wakame kohlrabi. Corn amaranth salsify bunya nuts
                             nori
                             azuki
                             bean
-                            chickweed potato bell pepper artichoke</p>
+                            chickweed potato bell pepper artichoke
+
+                        </p>
+
                     </section>
                     <section class="post-author">
                         author info goes here
