--- a/views/blog-post.html
+++ b/views/blog-post.html
@@ -9,14 +9,16 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="stylesheet" href="../styles/card.css">
     <link rel="stylesheet" href="../styles/main-post.css">
     <link rel="stylesheet" href="../styles/grid-post.css">
+    <link rel="stylesheet" href="../styles/author-post.css">
 
     <title>Blog post</title>
 </head>
 
 <body>
-    <div class="main-container" style="background-image: url('../assets/post-image-one.jpeg')">
+    <div class="main-container">
         <header class=" container navbar-container">
             <div class="navbar-logo">RR.</div>
             <ul class="navbar-menu">
@@ -35,7 +37,7 @@
         </header>
 
         <div class="post-background-color">
-            <header class="post-title-container">
+            <header class="container post-title-container">
                 <h1>Eat your veggies and save the planet</h1>
             </header>
             <div class="container post-container">
@@ -75,7 +77,39 @@
 
                     </section>
                     <section class="post-author">
-                        author info goes here
+                        <div class="card card-shadow card-author">
+                            <div class="avatar-author">
+                                <img src="../assets/author-avatar.png" alt="">
+                            </div>
+                            <ul class="info-author">
+                                <li>Roser Reverte</li>
+                                <li>Front End Dev</li>
+                                <li>student at Udacity</li>
+                            </ul>
+                            <div class="bio-author">
+                                <p>Beetroot water spinach okra water chestnut ricebean pea catsear courgette summer
+                                    purslane. Water spinach arugula pea tatsoi aubergine spring onion bush tomato kale
+                                    radicchio turnip chicory salsify pea sprouts fava bean.</p>
+                            </div>
+                            <ul class="socialmedia-author">
+                                <li>
+                                    <a href="#">
+                                        <img src="../assets/facebook.png" alt="Facebook">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="../assets/twitter.png" alt="Twitter">
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="#">
+                                        <img src="../assets/linkedin.png" alt="Linkedin">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </section>
                 </div>
 
