--- a/styles/card.css
+++ b/styles/card.css
@@ -8,6 +8,10 @@
     border-radius: 8px;
 }
 
+.card-shadow {
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, .2)
+}
+
 .card-title {
     font-family: 'Montserrat', sans-serif;
     color: #fff;
