--- a/views/blog-post.html
+++ b/views/blog-post.html
@@ -22,7 +22,7 @@
         <header class=" container navbar-container">
             <div class="navbar-logo">RR.</div>
             <ul class="navbar-menu">
-                <li class="navbar-link"><a href="#">Home</a></li>
+                <li class="navbar-link"><a href="../views/blog-homepage.html">Home</a></li>
                 <li class="navbar-link"><a href="#">About</a></li>
                 <li class="navbar-link"><a href="#">Contact</a></li>
             </ul>
